# NullPotOS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Configure  LICENSE  README.md  Readme.md
.github/workflows/: Build.yml
Src/: CMakeLists.txt
Src/Bootloader/: Bootloader.cpp  CMakeLists.txt
